src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Administratie__c</fullName>
        <label>Administratie</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ADMIN1</fullName>
                </value>
                <value>
                    <fullName>ADMIN2</fullName>
                </value>
                <value>
                    <fullName>ADMIN3</fullName>
                </value>
                <value>
                    <fullName>ADMIN4</fullName>
                </value>
                <value>
                    <fullName>ADMIN5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AvailableImpressions__c</fullName>
        <label>AvailableImpressions</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Barcode_Subtype__c</fullName>
        <label>Barcode Subtype</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Barcode_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>128A</fullName>
                </value>
                <value>
                    <fullName>128B</fullName>
                </value>
                <value>
                    <fullName>128C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Barcode_Type__c</fullName>
        <label>Barcode Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Code128</fullName>
                </value>
                <value>
                    <fullName>code39</fullName>
                </value>
                <value>
                    <fullName>ean13</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DART_Inventory__c</fullName>
        <label>DART_Inventory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DART_Live_Inventory__c</fullName>
        <label>DART_Live_Inventory</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductPicture__c</fullName>
        <formula>IMAGE(  URL_Picture__c  , &apos;Product Picture&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteName__c</fullName>
        <externalId>true</externalId>
        <label>SiteName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Picture__c</fullName>
        <label>URL Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WTRACE_Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
</CustomObject>